# Vista

./: .coverage  .deployment-config.yml  .env.example  .env.production.example  .gitignore  Dockerfile  GLASSMORPHISM_UI_CHANGES.md  LANDING_PAGE_CREATED.md  LIGHT_MODE_IMPROVEMENTS.md  README.md  THEME_ANIMATION_ADDED.md  THEME_TOGGLE_ADDED.md  UI_FIXES_SUMMARY.md  api_server.py  commit_log.txt  docker-compose.prod.yml  main.py  nginx.conf  pyproject.toml  rebuild_kb.py  render.yaml
.plandex-v2/: projects-v2.json
backend/: .env.production.example  .renderignore  api_server.py  docker-compose.staging.yml  main.py  pyproject.toml  render.yaml
echo/: __init__.py  cli.py  config.py  document_loader.py  embedding_generator.py  llm_base.py  llm_factory.py  llm_gemini.py  llm_openai.py  models.py  query_engine.py  text_chunker.py  vector_store.py
frontend/: .env.production.example  .gitignore  .vercelignore  build_log.txt  build_log_2.txt  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vitest.config.ts
scripts/: monitor-deployment.sh  rollback.sh
tests/: __init__.py  test_cli.py  test_concurrent_requests.py  test_config.py  test_graceful_shutdown.py  test_health_check.py  test_integration.py  test_llm_client.py  test_monitoring.py  test_performance.py  test_performance_monitoring.py  test_persistence.py  test_properties.py  test_query_engine.py  test_request_timeout.py  test_security.py  test_smoke.py  test_structured_logging.py  test_text_chunker.py  test_vector_store.py
vista/: __init__.py  concurrent_requests.py  (+14 more)
(+45 files in other folders)
